# airs

./: .gitattributes  .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/server/: db.rs  import.rs  models.rs  routes.rs  search.rs
static/: index.html
