[package]
name = "airs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
bitcode = "0.6.7"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.143"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = { version = "0.4.39", features = ["serde"] }
lmdb = "0.8.0"
nucleo = "0.5.0"
actix-web = { version = "4.13.0", features = ["compress-gzip"] }
actix-cors = "0.7.1"
actix-files = "0.6"
tokio = { version = "1.45.1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# [package]
# name = "airs"
# version = "0.1.0"
# edition = "2024"

# [dependencies]
# anyhow = "1.0.96"
# bitcode = "0.6.7"
# serde = { version = "1.0.218", features = ["derive"] }
# serde_json = "1.0.143"
# tracing = "0.1.41"
# tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
# chrono = { version = "0.4.39", features = ["serde"] }

# # server-only
# lmdb = { version = "0.8.0", optional = true }
# nucleo = { version = "0.5.0", optional = true }
# actix-web = { version = "4.13.0", features = ["compress-gzip"], optional = true }
# actix-cors = { version = "0.7.1", optional = true }
# actix-files = { version = "0.6", optional = true }
# tokio = { version = "1.45.1", features = ["full"], optional = true }

# # client-only
# leptos = { version = "0.7", features = ["csr"], optional = true }
# wasm-bindgen = { version = "0.2", optional = true }
# web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlInputElement", "KeyboardEvent", "ScrollIntoViewOptions", "ScrollBehavior"], optional = true }
# gloo-net = { version = "0.6", features = ["http"], optional = true }

# [features]
# server = ["lmdb", "nucleo", "actix-web", "actix-cors", "actix-files", "tokio"]
# client = ["leptos", "wasm-bindgen", "web-sys", "gloo-net"]

# [[bin]]
# name = "airs-server"
# path = "src/main.rs"
# required-features = ["server"]

# [profile.release]
# opt-level = 3
# lto = true
# codegen-units = 1
# panic = "abort"
# strip = true
